@@ -22,6 +22,7 @@
       required: true
       description: >
         Event round trip time in microseconds.
+      deprecated: true
 
     - name: metricset.namespace
       type: keyword
@@ -38,3 +39,13 @@
       example: elasticsearch
       description: >
         Name of the service metricbeat fetches the data from.
+
+    - name: event.duration
+      type: long
+      description: >
+        Duration of the event in nano seconds.
+
+    - name: event.dataset
+      type: keyword
+      description: >
+        Event dataset name.
